medio hecho, muchas clases necesitan revisión y cambios necesarios sobre todo en frontend