@@ -1,32 +1,35 @@
 package data.dao;
 
-import java.io.BufferedInputStream;
-import java.io.File;
-import java.io.FileInputStream;
-import java.net.URL;
-import java.sql.*;
+import java.io.InputStream;
+import java.sql.Connection;
+import java.sql.DriverManager;
+import java.sql.PreparedStatement;
+import java.sql.ResultSet;
+import java.sql.SQLException;
 import java.util.Properties;
-
 
 public class Database {
     private static Database theInstance;
+
     public static Database instance(){
-        if (theInstance==null){
-            theInstance=new Database();
+        if (theInstance == null){
+            theInstance = new Database();
         }
         return theInstance;
     }
-    public static final String PROPERTIES_FILE_NAME="/database.properties";
-    Connection cnx;
-    public Database(){
-        cnx=this.getConnection();
+
+    private static final String PROPERTIES_FILE_NAME = "/database.properties";
+    private Connection cnx;
+
+    private Database(){
+        cnx = this.getConnection();
     }
-    public Connection getConnection(){
-        try {
+
+    private Connection getConnection(){
+        try (InputStream input = getClass().getResourceAsStream(PROPERTIES_FILE_NAME)) {
             Properties prop = new Properties();
-            URL resourceUrl = getClass().getResource(PROPERTIES_FILE_NAME);
-            File file = new File(resourceUrl.toURI());
-            prop.load(new BufferedInputStream(new FileInputStream(file)));
+            prop.load(input);
+
             String driver = prop.getProperty("database_driver");
             String server = prop.getProperty("database_server");
             String port = prop.getProperty("database_port");
@@ -34,12 +37,15 @@ public class Database {
             String password = prop.getProperty("database_password");
             String database = prop.getProperty("database_name");
 
-            String URL_conexion="jdbc:mysql://"+ server+":"+port+"/"+
-                    database+"?user="+user+"&password="+password+"&serverTimezone=UTC";
-            Class.forName(driver).newInstance();
+            String URL_conexion = "jdbc:mysql://" + server + ":" + port + "/" +
+                    database + "?user=" + user + "&password=" + password +
+                    "&serverTimezone=UTC&useSSL=false";
+
+            Class.forName(driver).getDeclaredConstructor().newInstance();
             return DriverManager.getConnection(URL_conexion);
         } catch (Exception e) {
-            System.err.println(e.getMessage());
+            System.err.println("Error conectando a la base de datos: " + e.getMessage());
+            e.printStackTrace();
             System.exit(-1);
         }
         return null;
@@ -48,25 +54,28 @@ public class Database {
     public PreparedStatement prepareStatement(String statement) throws SQLException {
         return cnx.prepareStatement(statement);
     }
+
     public int executeUpdate(PreparedStatement statement) {
         try {
             statement.executeUpdate();
             return statement.getUpdateCount();
         } catch (SQLException ex) {
+            System.err.println("Error ejecutando update: " + ex.getMessage());
             return 0;
         }
     }
+
     public ResultSet executeQuery(PreparedStatement statement){
         try {
             return statement.executeQuery();
         } catch (SQLException ex) {
-            System.out.println(ex.getMessage());
+            System.err.println("Error ejecutando query: " + ex.getMessage());
         }
         return null;
     }
 
-    public void close() throws Exception{
-        if (cnx!=null && !cnx.isClosed()){
+    public void close() throws Exception {
+        if (cnx != null && !cnx.isClosed()){
             cnx.close();
         }
     }
